--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
     "url": "https://github.com/Microsoft/vscode-extension-samples"
   },
   "dependencies": {
-    "@starptech/prettyhtml": "^0.10.0",
+    "@types/js-beautify": "^1.8.1",
+    "js-beautify": "^1.10.1",
     "vscode-languageserver": "^5.2.1"
   },
   "scripts": {}
